# latent-versions

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
causal_versions/estimator/: __init__.py
experiments/configs/: N_1000+J_2_22+P_10+SNR_10.yaml  N_1000+J_2_22+P_10+SNR_5.yaml  N_1000+J_2_22+P_20+SNR_10.yaml  N_1000+J_2_22+P_20+SNR_5.yaml  N_1000+J_2_33+P_10+SNR_10.yaml  N_1000+J_2_33+P_10+SNR_5.yaml  N_1000+J_2_33+P_20+SNR_10.yaml  N_1000+J_2_33+P_20+SNR_5.yaml  N_1000+J_3_222+P_10+SNR_10.yaml  N_1000+J_3_222+P_10+SNR_5.yaml  N_1000+J_3_222+P_20+SNR_10.yaml  N_1000+J_3_222+P_20+SNR_5.yaml  N_1000+J_3_333+P_10+SNR_10.yaml  N_1000+J_3_333+P_10+SNR_5.yaml  N_1000+J_3_333+P_20+SNR_10.yaml  N_1000+J_3_333+P_20+SNR_5.yaml  N_2000+J_2_22+P_10+SNR_10.yaml  N_2000+J_2_22+P_10+SNR_5.yaml  N_2000+J_2_22+P_20+SNR_10.yaml  N_2000+J_2_22+P_20+SNR_5.yaml  N_2000+J_2_33+P_10+SNR_10.yaml  N_2000+J_2_33+P_10+SNR_5.yaml  N_2000+J_2_33+P_20+SNR_10.yaml  N_2000+J_2_33+P_20+SNR_5.yaml  N_2000+J_3_222+P_10+SNR_10.yaml  N_2000+J_3_222+P_10+SNR_5.yaml  N_2000+J_3_222+P_20+SNR_10.yaml  N_2000+J_3_222+P_20+SNR_5.yaml  N_2000+J_3_333+P_10+SNR_10.yaml  N_2000+J_3_333+P_10+SNR_5.yaml  N_2000+J_3_333+P_20+SNR_10.yaml  N_2000+J_3_333+P_20+SNR_5.yaml  N_500+J_2_22+P_10+SNR_10.yaml  N_500+J_2_22+P_10+SNR_5.yaml  N_500+J_2_22+P_20+SNR_10.yaml  N_500+J_2_22+P_20+SNR_5.yaml  N_500+J_2_33+P_10+SNR_10.yaml  N_500+J_2_33+P_10+SNR_5.yaml  N_500+J_2_33+P_20+SNR_10.yaml  N_500+J_2_33+P_20+SNR_5.yaml  (+9 more)
experiments/model_factory/: __init__.py  logit.py  outcome.py  treatment.py  version.py
(+14 files in other folders)
