[project]
name = "yoshikawa-kawano-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "forestplot>=0.4.1",
    "gokart>=1.10.2",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.4",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "plotly>=6.5.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "thunderbolt>=0.1.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
